# Data-Science--AI--ML-Repo

./: YOLO_Architecture_Explanation.md
ml-algorithms-docs/: README.md  package.json  pyproject.toml
ml-algorithms-docs/docs/: README.md
ml-algorithms-docs/docs/algorithms/: artificial-neural-networks-ann.md  autoencoders.md  bayesian-methods.md  catboost.md  convolutional-neural-networks-cnn.md  dbscan.md  decision-tree-classifier.md  decision-trees.md  gaussian-mixture-models-gmm.md  gradient-boosting-classifier.md  gradient-boosting.md  hierarchical-clustering.md  k-means-clustering.md  k-nearest-neighbors-knn.md  kmeans.md  knn.md  label-propagation---label-spreading.md  lasso-regression.md  lightgbm.md  linear-regression.md  logistic-regression.md  long-short-term-memory-lstm.md  naive-bayes.md  naïve-bayes.md  neural-networks.md  pca.md  polynomial-regression.md  principal-component-analysis-pca.md  random-forest.md  recurrent-neural-networks-rnn.md  ridge-regression.md  self-training-classifier.md  support-vector-machine-svm.md  support-vector-regression-svr.md  svm.md  t-sne.md  transformer-models-bert---gpt.md  umap.md  xgboost.md
ml-algorithms-docs/docs/templates/: algorithm-template.md
ml-algorithms-docs/examples/python/: requirements.txt
ml-algorithms-docs/examples/r/: DESCRIPTION
ml-algorithms-docs/notebooks/: linear_regression.ipynb  neural_networks.ipynb  random_forest.ipynb
scripts/: generate_full_docs.py
